--- a/app/build.gradle
+++ b/app/build.gradle
@@ -53,4 +53,7 @@ dependencies {
 
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.2.0"
     implementation "androidx.room:room-ktx:$room_version"
+
+    def fragment_version = "1.3.3"
+    implementation "androidx.fragment:fragment-ktx:$fragment_version"
 }
